src/objects/UIControl__c.object
<CustomObject>
    <description>this holds information about dimensions of various UI Controls for a specific page</description>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextLabel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageBlob_c__c</fullName>
        <label>ImageBlob__c</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <formula>IMAGE(Photo__c,&quot;Photo Unavaliable&quot;, 200,200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Images</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POIType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POIType</label>
        <referenceTo>POIType__c</referenceTo>
        <relationshipLabel>UIControls</relationshipLabel>
        <relationshipName>UIControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageConfigName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageConfig</label>
        <referenceTo>PageConfig__c</referenceTo>
        <relationshipLabel>UIControls</relationshipLabel>
        <relationshipName>UIControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PoiIconImageId__c</fullName>
        <label>PoiIconImageId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UIControlGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlGroupId</label>
        <referenceTo>UIControlGroup__c</referenceTo>
        <relationshipLabel>UIControls</relationshipLabel>
        <relationshipName>UIControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UIControlTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlTypeId</label>
        <referenceTo>UIControlType__c</referenceTo>
        <relationshipLabel>UIControls</relationshipLabel>
        <relationshipName>UIControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XCoordinate__c</fullName>
        <label>XCoordinate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YCoordinate__c</fullName>
        <label>YCoordinate</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>UIControl</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PageConfigName__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Width__c</columns>
        <columns>XCoordinate__c</columns>
        <columns>YCoordinate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIControls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>